test/fail/non-theorems/Issue23/18-9472-neut.fof
%-----------------------------------------------------------------------------
% This file was generated automatically by Apia.
%-----------------------------------------------------------------------------

%-----------------------------------------------------------------------------
% The conjecture.

% The source Agda term was:
% Name: Issue23.─-neut
% Role: prove
% Line: 18
fof(n24_107446709, conjecture, ( ! [A] : (n_45__10_107446709(r0_4_107446709,A) = n45__8_107446709(A)) )).

% End conjecture.

%-----------------------------------------------------------------------------
% End TPTP file.
